# WhiteLab_Public_Temp

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .snyk  .yamllint  AGENTS.md  Makefile  PROJECT_HISTORY.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-or-incident.yml  config.yml  decision.yml  proposal.yml  rfc.yml  shower-thought.yml
.github/workflows/: anonymization-gate.yml  apply-trigger.yml  ci.yml  critique-sync.yml  docs-up-to-date.yml  issue-to-pr.yml  notebooklm-digest.yml  proposal-apply.yml  roadmap-sync.yml  snyk.yml  stale-sweeper.yml  trivy.yml  weekly-digest-issue.yml  zero-trust-guard.yml
audit/: README.md
docs/adr/: README.md
docs/architecture/: 00-repo-layout.md  01-anonymization-pipeline.md  02-sync-workflow.md  03-notification-channels.md  2.0-fortress-design.md
docs/contributions/: README.md
docs/decisions/: ADR-0000-template.md  ADR-0001-approval-channel.md  ADR-0002-no-ssh-ever.md  ADR-0003-fortress-active-on-n95.md  README.md
docs/learning/: 01-zero-trust-explained.md
docs/research/: 00-infra-inference-history.md  01-infrastructure-bible.md
docs/roadmap/: HOW-IT-WORKS.md  README.md  active-roadmap.md
docs/runbooks/: 01-branch-and-diary.md  README.md  (+11 more)
inbox/: .gitkeep  README.md
infra/: README.md
policy/: zero_trust.rego
sandbox/: Dockerfile  README.md  activate.sh  bootstrap.sh  docker-compose.yml  requirements.txt  versions.env
tests/: conftest.py
tools/: README.md  audit-bootstrap.sh
(+67 files in other folders)
