[project]
name = "whitelab"
version = "0.1.0"
description = "WhiteLab home-infrastructure control plane (private)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests", "tools/anonymizer/tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"
markers = [
    "online: tests that require network access (skipped in offline CI).",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["tools", "tests"]
extend-exclude = [".sandbox", "dist", "vault", "audit"]

[tool.ruff.lint]
# Stay close to ruff defaults (E + F + W) so PR #24 does not churn
# pre-existing files outside its scope. Tighten in a follow-up PR.
select = ["E", "F", "W"]
ignore = [
    "E501",  # line length is enforced softly via formatter, not lint.
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["tools/anonymizer", "tools/notify", "tools/proposals"]
